# heckler

./: .env.example  CLAUDE.md  README.md  config.yaml  example.scd  start.sh
backend/: .gitignore  main.py  pyproject.toml  start.py
backend/heckler/: __init__.py  app.py  config.py  llm.py  memes.py  osc_server.py  websocket.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  Header.tsx  TypingIndicator.tsx
